myteo/test/analyze/type_check/variable_declaration/destructuring.exp
Error: Expected type `unit` but found `(int, string, bool)`
test/analyze/type_check/variable_declaration/destructuring.myte:13:3-12
 13 |   ((x, y, z): unit);
    |    ^^^^^^^^^

Error: Expected type `unit` but found `(int, string, bool)`
test/analyze/type_check/variable_declaration/destructuring.myte:26:3-12
 26 |   ((x, y, z): unit);
    |    ^^^^^^^^^

Error: Expected type `unit` but found `(int, string, bool)`
test/analyze/type_check/variable_declaration/destructuring.myte:39:3-17
 39 |   ((x, y, field3): unit);
    |    ^^^^^^^^^^^^^^

Error: Expected type `int` but found `(a, b)`
test/analyze/type_check/variable_declaration/destructuring.myte:73:6-12
 73 |   val (a, b): int = 1;
    |       ^^^^^^

Error: Expected type `(int, string)` but found `int`
test/analyze/type_check/variable_declaration/destructuring.myte:76:30
 76 |   val (c, d): (int, string) = 1;
    |                               ^

Error: Expected type `(int, string)` but found `(int, int)`
test/analyze/type_check/variable_declaration/destructuring.myte:79:30-36
 79 |   val (e, f): (int, string) = (1, 1);
    |                               ^^^^^^